force-app/main/default/objects/Contact/fields/Agentforce_Segment__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Segment__c</fullName>
    <label>Agentforce Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>