force-app/main/default/objects/Contact/fields/IT_Sector_Exposure_Pct__c.field-meta.xml
<CustomField>
    <fullName>IT_Sector_Exposure_Pct__c</fullName>
    <label>IT Sector Exposure %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>