force-app/main/default/objects/Contact/fields/Last_Advisory_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Advisory_Sent__c</fullName>
    <label>Last Advisory Sent</label>
    <type>DateTime</type>
</CustomField>