force-app/main/default/objects/Contact/fields/Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile__c</fullName>
    <label>Risk Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Conservative</fullName><default>false</default><label>Conservative</label></value>
            <value><fullName>Moderate</fullName><default>false</default><label>Moderate</label></value>
            <value><fullName>Aggressive</fullName><default>false</default><label>Aggressive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>