force-app/main/default/objects/Contact/fields/Total_AUM__c.field-meta.xml
<CustomField>
    <fullName>Total_AUM__c</fullName>
    <label>Total AUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>