force-app/main/default/objects/Contact/fields/WhatsApp_OptIn__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Opt-In</label>
    <type>Checkbox</type>
</CustomField>